src/objects/Other_Assistance__c.object
<CustomObject>
    <description>Object holds any financial assistance information an Applicant may have received (FEMA grants, loans, etc.)</description>
    <fields>
        <fullName>Active_NFIRA_Policy__c</fullName>
        <description>Active NFIRA Policy</description>
        <inlineHelpText>e.g. Yes / No</inlineHelpText>
        <label>Active NIFRA Policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_No__c</fullName>
        <description>Application Number </description>
        <formula>Application__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>e.g. 1000123456</inlineHelpText>
        <label>Application No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Field associates the Other Assistance record to the appropriate Application record</description>
        <inlineHelpText>Application associated to this record</inlineHelpText>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Other Assistance</relationshipLabel>
        <relationshipName>Other_Assistance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Applied_Date__c</fullName>
        <description>Date applied to FEMA</description>
        <inlineHelpText>e.g 1/29/2017</inlineHelpText>
        <label>Applied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Reg_Name__c</fullName>
        <description>Co-Reg Name</description>
        <inlineHelpText>e.g. WILLIAM  SMITH</inlineHelpText>
        <label>Co-Reg Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contents_Grant__c</fullName>
        <label>Contents Grant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <inlineHelpText>e.g. DOUGHERTY</inlineHelpText>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Damaged_Property_Address__c</fullName>
        <description>Damaged Property Address</description>
        <inlineHelpText>e.g. 5011  AUG AVE ALBANY GA 31705</inlineHelpText>
        <label>Damaged Property Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FEMA_Reg_No__c</fullName>
        <description>FEMA Registration Number </description>
        <inlineHelpText>e.g 901234567</inlineHelpText>
        <label>FEMA Reg. No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interface_Date_Time__c</fullName>
        <description>Date and Time Interface was activated</description>
        <inlineHelpText>e.g. 5/24/201712:00:00PM</inlineHelpText>
        <label>Interface Date / Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interface_Status__c</fullName>
        <description>The status of the interface request.</description>
        <inlineHelpText>e.g. COMPLETED/FAILED</inlineHelpText>
        <label>Interface Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Primary Language</description>
        <inlineHelpText>e.g. ENGLISH</inlineHelpText>
        <label>Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associates the Other Assistance record to the relevant Loan record</description>
        <inlineHelpText>Associates the Other Assistance record to the relevant Loan record</inlineHelpText>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Other Assistance</relationshipLabel>
        <relationshipName>Other_Assistance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loss_Date__c</fullName>
        <description>Date of Loss </description>
        <inlineHelpText>e.g. 1/29/2017</inlineHelpText>
        <label>Loss Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NFIRA_Compliant__c</fullName>
        <inlineHelpText>e.g. Yes / No</inlineHelpText>
        <label>NFIRA Compliant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <inlineHelpText>e.g. DEB J SMITH</inlineHelpText>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>O_R__c</fullName>
        <description>Own or Rent</description>
        <inlineHelpText>Own / Rent</inlineHelpText>
        <label>O/R</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occupancy_Verification__c</fullName>
        <description>Occupancy Verification- Verified or Not verified</description>
        <inlineHelpText>e.g. Verified or Not verified</inlineHelpText>
        <label>Occupancy Verification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ownership_Verification__c</fullName>
        <description>Ownership Verification- Verified or Not verified</description>
        <inlineHelpText>e.g.Verified or Not verified</inlineHelpText>
        <label>Ownership Verification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Not Verified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Residence__c</fullName>
        <label>Primary Residence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Real_Estate_Grant__c</fullName>
        <label>Real Estate Grant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <description>Date field which will display the date and time the interface with FEMA occurred</description>
        <inlineHelpText>e.g. 5/27/2017 8:15:05 AM</inlineHelpText>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <description>The User ID of the user who initiated the interface.  This can also be a &apos;System&apos; generated interface.</description>
        <inlineHelpText>e.g. ZSBRADF</inlineHelpText>
        <label>Requested By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_to_Maintain__c</fullName>
        <description>Required to Maintain</description>
        <inlineHelpText>e.g. Yes / No</inlineHelpText>
        <label>Required to Maintain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residence_Type__c</fullName>
        <description>Residence Type-Single Family / Mobile Home</description>
        <inlineHelpText>e.g. Single Family / Mobile Home</inlineHelpText>
        <label>Residence Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Family</fullName>
                </value>
                <value>
                    <fullName>Mobile Home</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rqmt_from_Previous_Assistance__c</fullName>
        <description>Rqmt from Previous Assistance</description>
        <inlineHelpText>e.g. Yes / No</inlineHelpText>
        <label>Rqmt from Previous Assistance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBA_App_Status__c</fullName>
        <description>SBA Application Status</description>
        <formula>Application__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>e.g. RECON: SBA RECONSIDERATION</inlineHelpText>
        <label>SBA App Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <description>Damage property Size</description>
        <inlineHelpText>e.g. Square Footage 1500ft</inlineHelpText>
        <label>Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State_Grant__c</fullName>
        <label>State Grant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_of_Housing_Assistance__c</fullName>
        <label>Total Amount of Housing Assistance</label>
        <summarizedField>Other_Assistance_Line_Item__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Other_Assistance_Line_Item__c.Type_of_Assistance__c</field>
            <operation>equals</operation>
            <value>Housing Assistance, Replacement Housing</value>
        </summaryFilterItems>
        <summaryForeignKey>Other_Assistance_Line_Item__c.Other_Assistance_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Amount_of_Other_Assistance__c</fullName>
        <label>Total Amount of Other Assistance</label>
        <summarizedField>Other_Assistance_Line_Item__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Other_Assistance_Line_Item__c.Type_of_Assistance__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </summaryFilterItems>
        <summaryForeignKey>Other_Assistance_Line_Item__c.Other_Assistance_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_FEMA_amount_for_Real_Estate__c</fullName>
        <description>Sum of Total Housing Assistance Value and Total Other Assistance Value</description>
        <formula>IF(Total_Amount_of_Housing_Assistance__c + Total_Amount_of_Other_Assistance__c &gt; 0, 
    Total_Amount_of_Housing_Assistance__c + Total_Amount_of_Other_Assistance__c, 
    0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total FEMA amount for Real Estate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Grants_Other_amount__c</fullName>
        <formula>Real_Estate_Grant__c +  Contents_Grant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Grants/Other amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Other Assistance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Other Assistance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Other Assistance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>